<resources>
    <string name="app_name">Gronsfeld Cipher</string>
    <string name="latin">ABCDEFGHIGKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>
    <string name="cyrillic">АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя</string>
    <string name="default_text">Криптографическая стойкость – способность криптографического алгоритма противостоять криптоанализу.</string>
    <string name="default_key">3827594185493761</string>
    <string-array name="alphabets">
        <item>Змішаний алфавіт</item>
        <item>Кирилиця</item>
        <item>Латиниця</item>
    </string-array>
    <string name="encode">Зашифрувати</string>
    <string name="decode">Розшифрувати</string>
    <string name="encoded_text">Зашифрований текст</string>
    <string name="decoded_text">Розшифрований текст</string>
    <string name="key">Ключ</string>
    <string name="text">Текст</string>
    <string name="invalid_pass">Хибний пароль</string>
    <string name="invalid_pass_alert">Ви ввели хибний пароль! Залишилось %d спроби</string>
    <string name="ok">OK</string>
    <string name="password">Пароль</string>
    <string name="check">Перевірити</string>
    <string name="enter_pass">Введіть, будь ласка, пароль</string>
    <string name="blocked">Ви перевищили допустиму кількість разів введення паролю</string>
    <string name="trial_header">Перевищення ліміту введення паролю</string>
    <string name="trial">Ви перевищили допустиму кількість разів введення паролю. Вам надається можливість пробного використання додатку протягом наступних 10 хвилин</string>
</resources>
